--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 alembic==1.7.5
+autopep8==1.6.0
 click==8.0.3
+dnspython==2.1.0
 dominate==2.6.0
+email-validator==1.1.3
 Flask==2.0.2
 Flask-Bootstrap==3.3.7.1
 Flask-JWT-Extended==4.3.1
@@ -10,6 +13,7 @@ Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 Mako==1.1.6
